2012-01-03 Ingo Pfennigstorf <i.pfennigstorf@gmail.com>
	* Added localization

2011-12-19 Ingo Pfennigstorf <i.pfennigstorf@gmail.com>
	* Added fakeWeek feature

2011-12-18 Ingo Pfennigstorf <i.pfennigstorf@gmail.com>
	* initial Code of the new Extension
	* Added Icon