@@ -3,6 +3,6 @@ plugin {
 		storageFolder = {$plugin.tx_vertretungsplan_pi1.storageFolder}
 		showMotd = {$plugin.tx_vertretungsplan_pi1.showMotd}
 		fakeWeek = 0
-		showDaysOfNextWeek = 2
+		showDaysOfNextWeek = 7
 	}
 }
